# jonmatthis

./: .gitignore  2025-01-06.md  README.md  angular_velocity_frames.csv  bs.md  hello.py  matthis-biosketch.md  pyproject.toml  requirements.txt  six_month_check_in_template.md  skellycam-detectcam-response.json
playground/: benchmark_observation_creation.py  chat.py  one_euro_filter_demo.py  pyproject.toml  test-cams.html
playground/cpp-test/: hello-world.cpp
playground/ferret_head_kinematics/: angular_velocity_helpers.py  ferret_head_kinematics.py  ferret_head_kinematics_visualization.py  quaternion_helper.py
playground/fireshop-rpi-server-demo/: package-lock.json  package.json  server.js
playground/my-voice-agent/: index.html  package-lock.json  package.json
playground/my-voice-agent/backend/: package-lock.json  package.json
playground/my-voice-agent/src/: main.ts  (+1 more)
playground/mystmd-tutorial/: myst.yml  pyproject.toml
playground/nohkwa-rust-cam/: Cargo.toml  nohkwa-readme.md
playground/openai-agents-sdk-play/: hello-world.ts  package-lock.json  package.json  tsconfig.json
playground/openai-voice-agent-play/: package-lock.json  package.json
playground/parakeet-transcribe/: parekeet_transcribe_ogg.py
playground/puffmachine-libuvc/: puffmachine_libuvc.py
playground/python_record_audio/: get_devices.py  hello.py  pyproject.toml  python_record_audio.py
playground/quarto-tutorial/: computations.html  computations.qmd  hello.html  hello.qmd
playground/rerunnn/: hello copy.py  hello.py  pyproject.toml
playground/rigid_body_quaternion_play/: ferret_head_kinematics.py  rigid_body_quaternion_play.py
playground/rpi_servo/: rpi_servo_control.py
playground/rust-rest-server/: Cargo.toml
playground/rust_webcam_poc/: Cargo.toml
playground/tauri-app/: package-lock.json  package.json
playground/tauri-editor/: .gitignore  README.md  index.html  package-lock.json  package.json
playground/vanilla-cam/: camera-worker.js  index.html  worker.js
playground/video_transcriber/: README.md  requirements.txt  video_transcriber.py
playground/whisper-transcriber/: README.md  index.html  package.json  pnpm-lock.yaml
playground/yt_dl/: youtube-download.py
(+191 files in other folders)
