[project]
name = "jonmatthis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "dash>=3.3.0",
    "rerun-sdk>=0.27.3",
    "jupyter>=1.1.1",
    "plotnine>=0.15.1",
]
