[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["jonmatthis <jonmatthis@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^15.0.0"
yt-dlp = "^2024.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
