[package]
name = "whisper-transcriber"
version = "0.1.0"
edition = "2021"

[lib]
name = "whisper_transcriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
whisper-rs = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
ringbuf = "0.4"
rubato = "0.16"
hound = "3.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration (uncomment as needed):
# cuda = ["whisper-rs/cuda"]
# metal = ["whisper-rs/metal"]
# vulkan = ["whisper-rs/vulkan"]
